faltan las propiedades custom de raza
