# model/src/main/java/org/jacobo/adyd/domain/service/CharacteristicService.java
@@ -2,6 +2,7 @@ package org.jacobo.adyd.domain.service;
 
 import org.jacobo.adyd.domain.model.CharacteristicModel;
 
+import java.util.List;
 import java.util.Optional;
 
 public interface CharacteristicService {
@@ -9,4 +10,6 @@ public interface CharacteristicService {
     CharacteristicModel createNewProperty(Long raceId, CharacteristicModel characteristicModel, String value);
 
     Optional<CharacteristicModel> findByCode(String code);
+
+    List<String> getBuiltInCharacteristics();
 }
